--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@teamhanko/hanko-elements": "^0.8.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "jose": "^4.15.4",
     "lucide-react": "^0.287.0",
     "next": "13.5.5",
     "react": "^18",
